--- a/page4.html
+++ b/page4.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Service</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">Service</div>
+    <div class="header"><p>Service</p></div>
     <div class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -19,27 +20,30 @@
           <hr>
           <li><a href="page5.html">AI</a></li>
           <hr>
-            <li><a href="page6.html">Contact</a></li>
-                <hr>
         </ul>
     </div>
-    <div class="joshua">
-        <a href="https://facebook.com/events/s/joshuas-color-run-2025/569550642617308/"><h4>Joshua Allen Hebel Memorial Scholarship Fund</h4></a>
-        <p>The Joshua Allen Hebel Memorial Scholarship Fund is a nonprofit organization that raises money to provide local scholarships to students in need.
-            The fund was established in memory of Joshua, a beloved member of the Palacios community.
-            I have volunteered with the 5k Color Run by setting up, cleaning up, helping with concessions, and handing out water to runners.
-            I was honored to receive a scholarship from this fund for the 2022-2023 academic year. 
-        </p>
-    </div>
+    
+    <div class="main">>
+        <div class="joshua">
+            <a href="https://facebook.com/events/s/joshuas-color-run-2025/569550642617308/"><h4 style="text-decoration: underline; font-size: 25px;">Joshua Allen Hebel Memorial</h4></a>
+            <br>
+            <p><em>The Joshua Allen Hebel Memorial Scholarship Fund is a nonprofit organization that raises money to provide local scholarships to students in need.
+                The fund was established in memory of Joshua, a beloved member of the Palacios community.
+                I have volunteered with the 5k Color Run by setting up, cleaning up, helping with concessions, and handing out water to runners.
+                I was honored to receive a scholarship from this fund for the 2022-2023 academic year. 
+            </em></p>
+        </div>
 
-    <div class="uriah">
-        <a href="https://www.facebook.com/share/19d1ZExgmq/?mibextid=wwXIfr"><h4>Uriah's Legacy Foundation</h4></a>
-        <p>Uriah's Legacy Foundation is a community-driven organization dedicated to supporting families in need. 
-            The foundation provides nonperishable items to families facing food insecurity, as well as educational resources for children.
-            Uriah's Legacy operates a Blessing Box, which is a free pantry where community members can take what they need and leave what they can.
-            I plan to further support the fundraiser by creating a website.
-        </p>
+        <div class="uriah">
+            <a href="https://www.facebook.com/share/19d1ZExgmq/?mibextid=wwXIfr"><h4 style="text-decoration: underline; font-size: 25px;">Uriah's Legacy Foundation</h4></a>
+            <br>
+            <p><em>Uriah's Legacy Foundation is a community-driven organization dedicated to supporting families in need. 
+                The foundation provides nonperishable items to families facing food insecurity, as well as educational resources for children.
+                Uriah's Legacy operates a Blessing Box, which is a free pantry where community members can take what they need and leave what they can.
+                I plan to further support the fundraiser by creating a website.
+            </em></p>
+        </div>
+
     </div>
-        
 </body>
 </html>
