--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+      <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ernest Barron</title>
-  <!--<link rel="stylesheet" href="style.css">-->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -73,8 +75,6 @@
           <hr>
           <li><a href="page5.html">AI</a></li>
           <hr>
-          <li><a href="page6.html">Contact</a></li>
-            <hr>
         </ul>
     </div>
 </body>
