--- a/page2.html
+++ b/page2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ernest Barron Protfolio</title>
-    <!--<link rel="stylesheet" href="style.css">-->
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -21,15 +21,17 @@
           <hr>
           <li><a href="page5.html">AI</a></li>
           <hr>
-            <li><a href="page6.html">Contact</a></li>
-                <hr>
         </ul>
     </div>
 
     <div class="main">
         <div class="academic">
-            <a href="https://github.com/ebarron03"><h4>Academic Projects</h4></a>
-                <h5>ADT Implementations</h5>           
+            <h4 style="text-decoration: underline; font-size: 25px;">Academic Projects</h4><br>
+                <h5 style="font-size: 18px;">ADT Implementations</h5>
+                <p><em>As part of my Data Structures and Algorithms course, I implemented several abstract data
+                    types (ADTs) in C/C++. These implementations helped me understand the underlying mechanics
+                    of data structures and their applications in computer science.</em></p>
+                <br> 
                  <ul>
                     <li>Stack</li>
                     <li>Linked List</li>
@@ -37,33 +39,32 @@
                     <li>Priority Queue</li>
                     <li>Hash Map</li>
                 </ul>
-                <h5>Banking System</h5>
-                <ul>
-                    <li>Interprocess Communication</li>
-                    <li>Thread Synchronization</li>
-                    <li>Network Programming</li>
-                    <li>RSA Encryption</li>
-                </ul>
+                <br>
+                <h5 style="font-size: 18px;">Banking System</h5>
+                <p><em>For my Introduction to Operating Systems course, I developed a basic banking system simulation
+                    in C/C++. Over the course of the semester, I implemented Interprocess Communication mechanisms
+                    between multiple banking clients and a central server, handled thread synchronization for concurrent transactions,
+                    and explored basic network programming and RSA encryption.</em></p>
         </div>
 
         <div class="planned_projects">
-            <h4>Planned Learning</h4>
+            <h4 style="text-decoration: underline; font-size: 25px;">Planned Learning</h4>
             <ul>
                 <li>Website development using HTML, CSS and JavaScript</li>
                 <li>Database Design and Implementation</li>
                 <li>Cloud Computing</li>
             </ul>
         </div>
-        <div class="lang"> 
-            <h4>Programming Languages</h4>
-                <ul>
-                <li>C/C++</li>
-                <li>Java</li>
-                <li>Haskell</li>
-                <li>Python</li>
-                </ul>
-        </div>
     </div>
-    <div class="linkedin"><a href="https://www.linkedin.com/in/ernest-barron-063b59324/">LinkedIn Profile</a></div>
+    <div class="linkedin">
+        <h4 style="text-decoration: underline; font-size: 25px;">For more information</h4>
+        <br>
+        <ul>
+            <li>Find my GitHub profile <a href="https://github.com/ebarron03">here</a></li>
+            <li>Find my LinkedIn profile <a href="https://www.linkedin.com/in/ernest-barron-063b59324/">here</a></li>
+            <li>Find my Facebook profile <a href="https://www.facebook.com/profile.php?id=61580120081446">here</a></li>
+            <li>Find my Instagram profile <a href="https://www.instagram.com/ernestbarron03/">here</a></li>
+        </ul>
+    </div>
 </body>
 </html>
